--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -1,7 +1,7 @@
 @import "initial-variables"
 
 =clearfix
-  &:after
+  &::after
     clear: both
     content: " "
     display: table
@@ -171,8 +171,8 @@
   position: relative
   vertical-align: top
   width: 20px
-  &:before,
-  &:after
+  &::before,
+  &::after
     background-color: $white
     content: ""
     display: block
@@ -181,10 +181,10 @@
     top: 50%
     transform: translateX(-50%) translateY(-50%) rotate(45deg)
     transform-origin: center center
-  &:before
+  &::before
     height: 2px
     width: 50%
-  &:after
+  &::after
     height: 50%
     width: 2px
   &:hover,
