Add control and button border variables

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1534,13 +1534,16 @@ a.box:active {
 .button {
   background-color: white;
   border-color: #dbdbdb;
+  border-width: 1px;
   color: #363636;
   cursor: pointer;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-bottom: calc(0.375em - 1px);
   padding-left: 0.75em;
   padding-right: 0.75em;
+  padding-top: calc(0.375em - 1px);
   text-align: center;
   white-space: nowrap;
 }
