--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -4,7 +4,7 @@ $navbar-fixed-z: 30 !default
 
 $navbar-item-color: $grey-dark !default
 $navbar-item-hover-color: $link !default
-$navbar-item-hover-background-color: $background !default
+$navbar-item-hover-background-color: $white-bis !default
 $navbar-item-active-color: $black !default
 $navbar-item-active-background-color: transparent !default
 $navbar-item-img-max-height: 1.75rem !default
@@ -42,6 +42,7 @@ $navbar-divider-background-color: $border !default
 
 .navbar
   background-color: $navbar-background-color
+  box-shadow: 0 2px 0 0 $background
   min-height: $navbar-height
   position: relative
   @each $name, $pair in $colors
@@ -104,13 +105,15 @@ $navbar-divider-background-color: $border !default
   &.is-fixed-top
     top: 0
 
-html.has-navbar-fixed-top,
-body.has-navbar-fixed-top
-  padding-top: $navbar-height
+html,
+body
+  &.has-navbar-fixed-top
+    padding-top: $navbar-height
 
-html.has-navbar-fixed-bottom,
-body.has-navbar-fixed-bottom
-  padding-bottom: $navbar-height
+html,
+body
+  &.has-navbar-fixed-bottom
+    padding-bottom: $navbar-height
 
 .navbar-brand,
 .navbar-tabs
@@ -137,17 +140,20 @@ body.has-navbar-fixed-bottom
   color: $navbar-item-color
   display: block
   line-height: 1.5
-  padding: 0.5rem 1rem
+  padding: 0.5rem 0.75rem
   position: relative
 
 a.navbar-item,
-a.navbar-link
+.navbar-link
+  border-radius: $radius
+  cursor: pointer
   &:hover,
   &.is-active
     background-color: $navbar-item-hover-background-color
     color: $navbar-item-hover-color
 
 .navbar-item
+  display: flex
   flex-grow: 0
   flex-shrink: 0
   img
@@ -240,13 +246,14 @@ a.navbar-link
   .navbar-menu,
   .navbar-start,
   .navbar-end
-    align-items: stretch
+    align-items: center
     display: flex
   .navbar
     min-height: $navbar-height
+    padding: 1rem 2rem
     &.is-transparent
       a.navbar-item,
-      a.navbar-link
+      .navbar-link
         &:hover,
         &.is-active
           background-color: transparent !important
@@ -367,7 +374,7 @@ a.navbar-link
     padding-bottom: $navbar-height
   // Hover/Active states
   a.navbar-item,
-  a.navbar-link
+  .navbar-link
     &.is-active
       color: $navbar-item-active-color
     &.is-active:not(:hover)
