--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -9,8 +9,11 @@ $fortyfour: #5f45bb
 $amazon: #ffd863
 $bleeding-green: #ABF47C
 $bleeding-red: #CA1F26
+$star: #FFD257
+$rss: #f26522
 
 @import "../bulma"
+@import "./_sass/main"
 @import "./_sass/highlight"
 @import "./_sass/override"
 @import "./_sass/global"
