--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -2,6 +2,9 @@ $breadcrumb-item-color: $link !default
 $breadcrumb-item-hover-color: $link-hover !default
 $breadcrumb-item-active-color: $text-strong !default
 
+$breadcrumb-item-padding-vertical: 0 !default
+$breadcrumb-item-padding-horizontal: 0.75em !default
+
 $breadcrumb-item-separator-color: $text !default
 
 .breadcrumb
@@ -18,7 +21,7 @@ $breadcrumb-item-separator-color: $text !default
     color: $breadcrumb-item-color
     display: flex
     justify-content: center
-    padding: 0.5em 0.75em
+    padding: $breadcrumb-item-padding-vertical $breadcrumb-item-padding-horizontal
     &:hover
       color: $breadcrumb-item-hover-color
   li
