--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -1,5 +1,6 @@
 $navbar-background-color: $white !default
 $navbar-height: 3.25rem !default
+$navbar-z: 30 !default
 $navbar-fixed-z: 30 !default
 
 $navbar-item-color: $grey-dark !default
@@ -45,6 +46,7 @@ $navbar-divider-background-color: $border !default
   box-shadow: 0 2px 0 0 $background
   min-height: $navbar-height
   position: relative
+  z-index: $navbar-z
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
