--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -3,6 +3,7 @@ svg
   max-width: 100%
 
 $carbon-space: 15px
+$carbon-width: 300px
 
 #carboncontainer
   align-items: center
@@ -10,8 +11,9 @@ $carbon-space: 15px
   justify-content: center
   margin-left: auto
   margin-right: auto
-  max-width: 340px
+  max-width: $carbon-width
   min-height: 120px + ($carbon-space * 2)
+  min-width: 280px
 
 #carbon
   flex-grow: 1
@@ -21,7 +23,7 @@ $carbon-space: 15px
   &:hover
     box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $primary
   +tablet
-    width: 340px
+    width: $carbon-width
 
 #carbonads
   font-size: 14px
