Create links nav

--- a/docs/_includes/anchor.html
+++ b/docs/_includes/anchor.html
@@ -1,4 +1,4 @@
-<hr style="margin-bottom: 0;">
+<hr class="hr" style="margin-bottom: 0;">
 
 <h3 id="{{ include.name | slugify }}" class="title is-4 is-spaced bd-anchor-title">
   {{ include.name }}
