--- a/docs/_includes/elements/improve-page.html
+++ b/docs/_includes/elements/improve-page.html
@@ -1,6 +1,6 @@
 <section class="section bd-typo">
   <div class="container">
-    <p class="has-text-centered has-text-grey-light">
+    <p class="has-text-grey-light">
       <a href="{{ site.url }}/made-with-bulma/">
         <img src="{{ site.url }}/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
       </a>
