--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -9,7 +9,27 @@
   position: relative
 
 .bd-breadcrumb
+  display: flex
+  justify-content: space-between
   margin-bottom: 2.5rem
+  .breadcrumb:not(:last-child)
+    margin-bottom: 0
+
+.bd-prev-next
+  align-items: flex-start
+  color: $grey-light
+  display: none
+  flex-grow: 0
+  flex-shrink: 0
+  margin-left: 0.5rem
+  text-align: center
+  a,
+  span
+    border-radius: $radius
+    width: 1.5rem
+  a
+    &:hover
+      background-color: $background
 
 .bd-header
   margin-bottom: 2.5rem
@@ -52,6 +72,8 @@
     overflow: hidden
     flex-grow: 1
     flex-shrink: 1
+  .bd-prev-next
+    display: flex
   .bd-side
     flex: 0 0 300px
 
