--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -81,6 +81,7 @@
   .bd-main
     padding: 0 3rem
   .bd-lead
-    padding: 3rem 3rem 3rem 0
+    margin-left: -3rem
+    padding: 3rem
   .bd-side
     padding: 3rem 0 3rem 1.5rem
