--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -10,10 +10,9 @@ breadcrumb:
 - components
 - components-breadcrumb
 meta:
-- since: "0.4.3"
-- variables: true
-- colors: false
-- sizes: true
+  variables: true
+  colors: false
+  sizes: true
 ---
 
 {% capture breadcrumb_example %}
