--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -1,6 +1,6 @@
 ---
 title: Card
-subtile: "An all-around flexible and composable component"
+subtitle: "An all-around flexible and composable component"
 layout: documentation
 doc-tab: components
 doc-subtab: card
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-card
 meta:
-- variables: true
-- colors: false
-- sizes: false
+  variables: true
+  colors: false
+  sizes: false
 ---
 
 {% capture card_example %}
