--- a/docs/documentation/components/menu.html
+++ b/docs/documentation/components/menu.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-menu
 meta:
-- colors: false
-- sizes: false
-- variables: true
+  colors: false
+  sizes: false
+  variables: true
 ---
 
 {% capture menu_example %}
