--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -4,15 +4,15 @@ subtitle: "Colored <strong>message</strong> blocks, to emphasize part of your pa
 layout: documentation
 doc-tab: components
 doc-subtab: message
-meta:
-- colors: true
-- sizes: true
-- variables: true
 breadcrumb:
 - home
 - documentation
 - components
 - components-message
+meta:
+  colors: true
+  sizes: true
+  variables: true
 ---
 
 {% capture message_example %}
