--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -4,15 +4,15 @@ subtitle: "A classic <strong>modal</strong> overlay, in which you can include <e
 layout: documentation
 doc-tab: components
 doc-subtab: modal
-meta:
-- colors: false
-- sizes: false
-- variables: true
 breadcrumb:
 - home
 - documentation
 - components
 - components-modal
+meta:
+  colors: false
+  sizes: false
+  variables: true
 ---
 
 {% capture modal %}
