--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-navbar
 meta:
-- colors: true
-- sizes: false
-- variables: true
+  colors: true
+  sizes: false
+  variables: true
 ---
 
 {% capture navbar_example %}
