--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-pagination
 meta:
-- colors: false
-- sizes: true
-- variables: true
+  colors: false
+  sizes: true
+  variables: true
 ---
 
 {% capture pagination_example %}
