--- a/docs/documentation/components/panel.html
+++ b/docs/documentation/components/panel.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-panel
 meta:
-- colors: false
-- sizes: false
-- variables: true
+  colors: false
+  sizes: false
+  variables: true
 ---
 
 {% capture panel_example %}
