--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-tabs
 meta:
-- colors: false
-- sizes: true
-- variables: true
+  colors: false
+  sizes: true
+  variables: true
 ---
 
 {% capture tabs_example %}
