--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -34,7 +34,7 @@
   width: 0.5em;
 }
 
-.box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
+.box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
 .subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .tabs:not(:last-child), .bd-snippet:not(:last-child), .bd-callout:not(:last-child) {
   margin-bottom: 1.5rem;
 }
@@ -4545,7 +4545,6 @@ a.box:active {
 .table {
   background-color: white;
   color: #363636;
-  margin-bottom: 1.5rem;
 }
 
 .table td,
@@ -9592,7 +9591,8 @@ label.panel-block:hover {
     padding: 0 3rem;
   }
   .bd-lead {
-    padding: 3rem 3rem 3rem 0;
+    margin-left: -3rem;
+    padding: 3rem;
   }
   .bd-side {
     padding: 3rem 0 3rem 1.5rem;
@@ -10389,6 +10389,10 @@ svg {
 
 #alternative a:hover {
   text-decoration: underline;
+}
+
+.bd-typo {
+  margin-top: 3rem;
 }
 
 .bd-has-text-rss {
@@ -12330,6 +12334,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 .native-js {
+  border-top: 2px solid whitesmoke;
   display: none;
   font-size: 1rem;
   opacity: 0;
