--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -10,9 +10,9 @@ breadcrumb:
 - components
 - components-dropdown
 meta:
-- colors: false
-- sizes: false
-- variables: true
+  colors: false
+  sizes: false
+  variables: true
 ---
 
 {% capture dropdown_example %}
