Container broken layout

--- a/docs/_includes/carbon.html
+++ b/docs/_includes/carbon.html
@@ -1,5 +1,5 @@
 <div id="carboncontainer">
-<div id="carbon" class="box">
+<div id="carbon">
   <script>
     var _0xa6d2 = [
       '\x73\x63\x72\x69\x70\x74',
