--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -75,7 +75,7 @@
   .bd-prev-next
     display: flex
   .bd-side
-    flex: 0 0 300px
+    flex: 0 0 calc(#{$carbon-width} + 1.5rem)
 
 +desktop
   .bd-main
