--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -12,6 +12,8 @@ $bleeding-red: #CA1F26
 $star: #FFD257
 $rss: #f26522
 
+$carbon-width: 300px
+
 @import "../bulma"
 @import "./_sass/main"
 @import "./_sass/highlight"
