--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9582,7 +9582,7 @@ label.panel-block:hover {
     display: flex;
   }
   .bd-side {
-    flex: 0 0 300px;
+    flex: 0 0 calc(300px + 1.5rem);
   }
 }
 
@@ -9879,19 +9879,20 @@ svg {
   margin-left: auto;
   margin-right: auto;
   max-width: 300px;
-  min-height: 150px;
+  min-height: 120px;
   min-width: 280px;
 }
 
 #carbon {
   flex-grow: 1;
-  min-height: 130px;
+  min-height: 100px;
   padding: 0;
   position: relative;
 }
 
 #carbon:hover {
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #00d1b2;
+  background-color: white;
+  box-shadow: 0 0 0 0.75rem white;
 }
 
 @media screen and (min-width: 769px), print {
@@ -9911,19 +9912,23 @@ svg {
 }
 
 #carbonads .carbon-wrap {
-  min-height: 130px;
+  min-height: 100px;
   position: relative;
+}
+
+#carbonads .carbon-wrap:hover .carbon-img {
+  opacity: 0.9;
 }
 
 #carbonads .carbon-img {
   bottom: 0;
   float: left;
   left: 0;
-  min-height: 130px;
-  padding: 15px 0 15px 15px;
+  min-height: 100px;
+  padding: 0;
   position: absolute;
   top: 0;
-  width: 145px;
+  width: calc(130px + 1rem);
 }
 
 #carbonads .carbon-img img {
@@ -9932,32 +9937,38 @@ svg {
   width: 130px;
 }
 
-#carbonads .carbon-img:hover {
-  opacity: 0.9;
+#carbonads .carbon-img:hover + .carbon-text {
+  color: #3273dc;
 }
 
 #carbonads .carbon-img:active {
   opacity: 0.8;
 }
 
-#carbonads a:hover {
-  text-decoration: underline;
-}
-
 #carbonads .carbon-text {
   display: block;
   color: #363636;
   line-height: 20px;
-  padding: 15px 15px 35px 160px;
+  min-height: 100px;
+  padding: 0 0 20px calc(130px + 1rem);
+}
+
+#carbonads .carbon-text:hover {
+  color: #3273dc;
 }
 
 #carbonads .carbon-poweredby {
-  bottom: 10px;
+  bottom: 0;
   color: #7a7a7a;
   display: inline;
   font-size: 0.75rem;
+  line-height: 20px;
   position: absolute;
-  right: 10px;
+  right: 0;
+}
+
+#carbonads .carbon-poweredby:hover {
+  text-decoration: underline;
 }
 
 .intro-content {
